--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,11 @@ div{
     margin-left: 40%;
     margin-top: 8%;
 }
+@media (max-width: 600px){
+    div{
+        margin-left: 15%;
+    }
+}
 img{
     border-radius: 4%;
     width: 240px;
