--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ body{
 }
 div{
     background-color: hsl(0, 0%, 100%);
-    border-radius: 4%;
+    border-radius: 16px;
     width: 260px;
     height: 420px;
     margin-left: 40%;
