--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ body{
     font-family: 'Outfit', sans-serif;
     font-size: 15px;
 }
-div{
+main{
     background-color: hsl(0, 0%, 100%);
     border-radius: 16px;
     width: 260px;
@@ -12,7 +12,7 @@ div{
     margin-top: 8%;
 }
 @media (max-width: 600px){
-    div{
+    main{
         margin-left: 15%;
     }
 }
